[tool.poetry]
name = "graph-app"
version = "0.1.0"
description = ""
authors = ["Heiko Kulinna <Heikokulinna@gmx.de>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
dash = "^2.16.1"
Flask = "^3.0.2"
dash-extensions = "^1.0.14"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-carbon-components = "^0.4.3.1"
python-dotenv = "^1.0.1"
networkx = "^3.2.1"
plotly = "^5.20.0"
scikit-learn = "^1.4.1.post1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"
ruff = "^0.3.3"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79








